<resources>
    <string name="app_name">android-hcbc</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="publication_year_hint">Publication Year</string>
    <string name="isbn_hint">ISBN</string>
    <string name="author_prefix">Author: </string>
    <string name="publication_year_prefix">Publication Year: </string>
    <string name="isbn_prefix">ISBN: </string>
    <string name="general_error_message"> Sorry, try it later </string>
    <string name="create_error_message"> Create failure, try it later </string>
    <string name="delete_error_message">Delete failure, try it later</string>
    <string name="update_error_message">Update failure, try it later</string>
    <string name="search_error_message">Sorry, no book</string>
    <string name="get_data_error_message">Get data failure, try it later</string>
    <string name="search">Search by id</string>
    <string name="dialog_title">Confirm delete?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_support_title">after delete, the book will be remove from book list</string>
</resources>